force-app/main/default/objects/Account_Plan_Item__c/Account_Plan_Item__c.object-meta.xml
<CustomObject>
    <description>Account Plan Details</description>
    <label>Account Plan Item</label>
    <nameField>
        <displayFormat>APIN-{0000}</displayFormat>
        <label>Account Plan Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>