force-app/main/default/objects/Account_Plan_Item__c/fields/Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Name__c</fullName>
    <label>Item Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Achieved (current)</fullName>
            </value>
            <value>
                <fullName>Customer’s Requirement/objective/focus</fullName>
            </value>
            <value>
                <fullName>Strategy (how)</fullName>
            </value>
            <value>
                <fullName>SWOT Analysis</fullName>
            </value>
            <value>
                <fullName>Vision (what)</fullName>
            </value>
            <value>
                <fullName>What hasn’t worked well</fullName>
            </value>
            <value>
                <fullName>What has worked well</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>